--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/node": "^18.0.1",
+    "@types/react": "^18.0.14",
     "autoprefixer": "^10.4.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
@@ -24,6 +26,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.7.4"
   }
 }
