--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "jest-environment-jsdom": "^28.1.3",
     "next": "12",
     "next-sitemap": "^3.1.8",
     "normalize.css": "^8.0.1",
