--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.10.2",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "firebase": "^9.9.1",
+    "firebase-admin": "^11.0.1",
     "jest-environment-jsdom": "^28.1.3",
     "next": "12",
+    "next-firebase-auth": "^1.0.0-canary.13",
     "next-sitemap": "^3.1.8",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-hook-form": "^7.34.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.54.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
