--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 16
       - name: Install Dependencies
-        run: yarn Install
+        run: yarn install
       - name: Lint
         run: npm run eslint
 
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: 16
       - name: Install Dependencies
-        run: yarn Install
+        run: yarn install
       - name: Lint
         run: npm run eslint
 
@@ -45,6 +45,6 @@ jobs:
         with:
           node-version: 16
       - name: Install Dependencies
-        run: yarn Install
+        run: yarn install
       - name: Lint
         run: npm run eslint
