--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Dependencies
         run: yarn install
       - name: Lint
-        run: npm run eslint
+        run: yarn lint
 
   QA:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
       - name: Install Dependencies
         run: yarn install
       - name: Lint
-        run: npm run eslint
+        run: yarn lint
 
   PROD:
     runs-on: ubuntu-latest
@@ -47,4 +47,4 @@ jobs:
       - name: Install Dependencies
         run: yarn install
       - name: Lint
-        run: npm run eslint
+        run: yarn lint
