--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ./ --ext js,jsx,ts,tsx"
   },
   "dependencies": {
     "@svgr/webpack": "^6.2.1",
@@ -32,6 +32,6 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4"
   }
 }
