--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.38.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
