--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
