--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "eslint-plugin-typescript": "^0.14.0",
+    "firebase": "^9.16.0",
     "jest-environment-jsdom": "^28.1.3",
     "next": "12",
     "next-firebase-auth": "^1.0.0-canary.13",
