--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "firebase": "^9.16.0",
     "jest-environment-jsdom": "^28.1.3",
     "next": "12",
-    "next-firebase-auth": "^1.0.0-canary.13",
+    "next-firebase-auth": "^0.15.0",
     "next-sitemap": "^3.1.8",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
