--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-firebase-auth": "^0.15.0",
     "next-sitemap": "^3.1.8",
     "normalize.css": "^8.0.1",
+    "rc-collapse": "^3.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.42.1",
