--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.3.1",
+    "react-lazyload": "^3.2.0",
+    "react-simply-carousel": "^8.5.2",
     "sass": "^1.57.1"
   },
   "devDependencies": {
