--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "lint": "eslint ./ --ext js,jsx,ts,tsx"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "eslint-plugin-typescript": "^0.14.0",
-    "firebase": "^9.16.0",
+    "firebase": "^9.17.2",
+    "firebase-admin": "^11.5.0",
     "jest-environment-jsdom": "^28.1.3",
     "next": "12",
-    "next-firebase-auth": "^0.15.0",
     "next-sitemap": "^3.1.8",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
@@ -26,7 +27,8 @@
     "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
     "react-simply-carousel": "^8.5.2",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
