--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
     "jest-environment-jsdom": "^28.1.3",
+    "js-cookie": "^3.0.1",
     "next": "12",
     "next-sitemap": "^3.1.8",
     "normalize.css": "^8.0.1",
