--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux-thunk": "^2.1.0",
     "eslint-plugin-typescript": "^0.14.0",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
@@ -27,7 +29,10 @@
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
+    "react-redux": "^8.0.5",
     "react-simply-carousel": "^8.5.2",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
     "yup": "^1.0.2"
   },
