--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/react-redux": "^7.1.25",
     "@types/redux-thunk": "^2.1.0",
     "eslint-plugin-typescript": "^0.14.0",
