--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "noImplicitAny": true,
+        "pretty": true,
+        "noEmitOnError": true
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
