--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/js-cookie": "^3.0.3",
     "@types/react-redux": "^7.1.25",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "^1.3.5",
     "eslint-plugin-typescript": "^0.14.0",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
@@ -32,7 +33,9 @@
     "react-lazyload": "^3.2.0",
     "react-redux": "^8.0.5",
     "react-simply-carousel": "^8.5.2",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
     "yup": "^1.0.2"
