--- a/package.json
+++ b/package.json
@@ -1,56 +1,64 @@
 {
-  "name": "qosqomposta",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "lint": "eslint ./ --ext js,jsx,ts,tsx"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^2.9.11",
-    "@svgr/webpack": "^6.2.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@types/js-cookie": "^3.0.3",
-    "@types/react-redux": "^7.1.25",
-    "@types/redux-thunk": "^2.1.0",
-    "axios": "^1.3.5",
-    "eslint-plugin-typescript": "^0.14.0",
-    "firebase": "^9.17.2",
-    "firebase-admin": "^11.5.0",
-    "jest-environment-jsdom": "^28.1.3",
-    "js-cookie": "^3.0.1",
-    "next": "12",
-    "next-sitemap": "^3.1.8",
-    "normalize.css": "^8.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.42.1",
-    "react-icons": "^4.3.1",
-    "react-lazyload": "^3.2.0",
-    "react-redux": "^8.0.5",
-    "react-simply-carousel": "^8.5.2",
-    "react-toastify": "^9.1.2",
-    "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2",
-    "sass": "^1.57.1",
-    "yup": "^1.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "^18.0.1",
-    "@types/react": "^18.0.14",
-    "autoprefixer": "^10.4.5",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.8.4"
-  }
+    "name": "qosqomposta",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "postbuild": "next-sitemap",
+        "start": "next start",
+        "lint": "eslint ./ --ext js,jsx,ts,tsx",
+        "prepare": "husky install",
+        "pre-push": "yarn type-check",
+        "type-check": "tsc --noEmit -skipLibCheck && echo '✅ PASSED Types'"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^2.9.11",
+        "@svgr/webpack": "^6.2.1",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@types/js-cookie": "^3.0.3",
+        "@types/react-redux": "^7.1.25",
+        "@types/redux-thunk": "^2.1.0",
+        "axios": "^1.3.5",
+        "eslint-plugin-typescript": "^0.14.0",
+        "firebase": "^9.17.2",
+        "firebase-admin": "^11.5.0",
+        "husky": "^8.0.3",
+        "jest-environment-jsdom": "^28.1.3",
+        "js-cookie": "^3.0.1",
+        "lint-staged": "^13.2.1",
+        "next": "12",
+        "next-sitemap": "^3.1.8",
+        "normalize.css": "^8.0.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-hook-form": "^7.42.1",
+        "react-icons": "^4.3.1",
+        "react-lazyload": "^3.2.0",
+        "react-redux": "^8.0.5",
+        "react-simply-carousel": "^8.5.2",
+        "react-toastify": "^9.1.2",
+        "redux": "^4.2.1",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.4.2",
+        "sass": "^1.57.1",
+        "yup": "^1.0.2"
+    },
+    "devDependencies": {
+        "@types/node": "^18.0.1",
+        "@types/react": "^18.0.14",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "autoprefixer": "^10.4.5",
+        "eslint": "^8.38.0",
+        "eslint-config-next": "11.1.2",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "postcss": "^8.4.12",
+        "prettier": "^2.6.2",
+        "tailwindcss": "^3.0.24",
+        "typescript": "^5.0.4",
+        "husky": "^8.0.0"
+    }
 }
