--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start": "next start",
         "lint": "eslint ./ --ext js,jsx,ts,tsx",
         "prepare": "husky install",
+        "pre-commit": "lint-staged",
         "pre-push": "yarn type-check",
         "type-check": "tsc --noEmit -skipLibCheck && echo '✅ PASSED Types'"
     },
@@ -52,13 +53,12 @@
         "@typescript-eslint/parser": "^5.59.0",
         "autoprefixer": "^10.4.5",
         "eslint": "^8.38.0",
-        "eslint-config-next": "11.1.2",
+        "eslint-config-next": "^13.3.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "postcss": "^8.4.12",
         "prettier": "^2.6.2",
         "tailwindcss": "^3.0.24",
-        "typescript": "^5.0.4",
-        "husky": "^8.0.0"
+        "typescript": "^5.0.4"
     }
 }
