--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,15 @@
         "stylelint-config-prettier"
     ],
     "rules": {
+        "at-rule-no-unknown": null,
+        "scss/at-rule-no-unknown": [
+            true,
+            {
+                "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+            }
+        ],
+        "declaration-block-trailing-semicolon": null,
+        "no-descending-specificity": null,
         "selector-class-pattern": null,
         "declaration-property-value-disallowed-list": {
             "/^border/": []
