--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "lint-staged": "^13.2.1",
         "next": "12",
         "next-sitemap": "^3.1.8",
+        "node-sass": "^8.0.0",
         "normalize.css": "^8.0.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
@@ -46,6 +47,7 @@
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.4.2",
         "sass": "^1.57.1",
+        "sass-loader": "^13.2.2",
         "stylelint": "^15.5.0",
         "stylelint-config-prettier": "^9.0.5",
         "stylelint-config-sass-guidelines": "^10.0.0",
