--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
         "jest-environment-jsdom": "^28.1.3",
         "js-cookie": "^3.0.1",
         "lint-staged": "^13.2.1",
-        "next": "12",
+        "next": "^13.3.1",
+        "next-redux-wrapper": "^8.1.0",
         "next-sitemap": "^3.1.8",
         "node-sass": "^8.0.0",
         "normalize.css": "^8.0.1",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.42.1",
         "react-icons": "^4.3.1",
         "react-lazyload": "^3.2.0",
@@ -62,7 +63,7 @@
         "@typescript-eslint/parser": "^5.59.0",
         "autoprefixer": "^10.4.5",
         "eslint": "^8.38.0",
-        "eslint-config-next": "^13.3.0",
+        "eslint-config-next": "^13.3.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "postcss": "^8.4.12",
