--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
         "stylelint:fix": "stylelint '**/*.scss' --fix"
     },
     "dependencies": {
+        "@googlemaps/react-wrapper": "^1.1.35",
         "@hookform/resolvers": "^2.9.11",
+        "@reach/combobox": "^0.18.0",
+        "@react-google-maps/api": "^2.18.1",
         "@svgr/webpack": "^6.2.1",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
+        "@types/google.maps": "^3.52.6",
         "@types/js-cookie": "^3.0.3",
         "@types/react-redux": "^7.1.25",
         "@types/redux-thunk": "^2.1.0",
@@ -54,6 +58,7 @@
         "stylelint-config-sass-guidelines": "^10.0.0",
         "stylelint-config-standard-scss": "^8.0.0",
         "stylelint-scss": "^4.6.0",
+        "use-places-autocomplete": "^4.0.0",
         "yup": "^1.0.2"
     },
     "devDependencies": {
