--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@testing-library/react": "^13.3.0",
         "@types/google.maps": "^3.52.6",
         "@types/js-cookie": "^3.0.3",
+        "@types/react-datepicker": "^4.11.2",
         "@types/react-redux": "^7.1.25",
         "@types/redux-thunk": "^2.1.0",
         "axios": "^1.3.5",
@@ -41,6 +42,7 @@
         "node-sass": "^8.0.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
+        "react-datepicker": "^4.11.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.42.1",
         "react-icons": "^4.3.1",
