--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
+    "react-phone-number-input": "^3.2.22",
     "react-redux": "^8.0.5",
     "react-simply-carousel": "^8.5.2",
     "react-toastify": "^9.1.2",
