--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^2.9.11",
-    "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.18.1",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
@@ -49,6 +48,7 @@
     "react-lazyload": "^3.2.0",
     "react-phone-number-input": "^3.2.22",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.3",
     "react-simply-carousel": "^8.5.2",
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
