--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.2",
