--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -18,7 +18,6 @@
     "declaration-property-value-disallowed-list": {
       "/^border/": []
     },
-    "declaration-empty-line-before": null,
     "property-no-vendor-prefix": [
       true,
       {
@@ -32,6 +31,8 @@
         "ignore": ["class"]
       }
     ],
-    "max-nesting-depth": 3
+    "max-nesting-depth": 3,
+    "declaration-empty-line-before": null,
+    "rule-empty-line-before": null
   }
 }
