--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.3.5",
+    "classnames": "^2.5.1",
     "date-fns": "^2.30.0",
     "eslint-plugin-typescript": "^0.14.0",
     "firebase": "^9.17.2",
