--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,30 +1,24 @@
 {
   "extends": [
     "stylelint-config-sass-guidelines",
-    "stylelint-config-standard-scss",
-    "stylelint-config-prettier"
+    "stylelint-config-prettier",
+    "stylelint-config-tailwindcss"
   ],
+  "plugins": ["stylelint-order"],
   "rules": {
-    "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
-      }
-    ],
-    "declaration-block-trailing-semicolon": null,
-    "no-descending-specificity": null,
     "selector-class-pattern": null,
     "declaration-property-value-disallowed-list": {
       "/^border/": []
     },
+
+    "order/properties-alphabetical-order": true,
     "property-no-vendor-prefix": [
       true,
       {
         "ignoreProperties": ["/./"]
       }
     ],
-    "selector-max-compound-selectors": 4,
+    "selector-max-compound-selectors": 3,
     "selector-no-qualifying-type": [
       true,
       {
@@ -32,7 +26,12 @@
       }
     ],
     "max-nesting-depth": 3,
-    "declaration-empty-line-before": null,
-    "rule-empty-line-before": null
+    "selector-max-id": null,
+    "scss/at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screens"]
+      }
+    ]
   }
 }
