--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start",
     "lint": "eslint ./ --ext js,jsx,ts,tsx",
     "prepare": "husky install",
+    "prettier": "prettier --list-different './**/*.{js,ts,tsx,jsx,scss}'",
+    "prettier:fix": "prettier --write './**/*.{js,ts,tsx,jsx,scss}'",
     "pre-commit": "lint-staged",
     "pre-push": "yarn type-check",
     "type-check": "tsc --noEmit -skipLibCheck && echo '✅ PASSED Types'",
@@ -20,7 +22,6 @@
     "@hookform/resolvers": "^2.9.11",
     "@react-google-maps/api": "^2.18.1",
     "@svgr/webpack": "^6.2.1",
-    "@tanstack/react-query": "^4.29.19",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/google.maps": "^3.52.6",
@@ -34,14 +35,13 @@
     "eslint-plugin-typescript": "^0.14.0",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.4",
     "jest-environment-jsdom": "^28.1.3",
     "js-cookie": "^3.0.1",
-    "lint-staged": "^13.2.1",
+    "lint-staged": "^15.2.9",
     "next": "^13.3.1",
     "next-redux-wrapper": "^8.1.0",
     "next-sitemap": "^3.1.8",
-    "node-sass": "^8.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
@@ -58,7 +58,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.57.1",
+    "sass": "^1.77.8",
     "sass-loader": "^13.2.2",
     "stylelint": "^15.5.0",
     "stylelint-config-prettier": "^9.0.5",
@@ -80,7 +80,15 @@
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
+    "stylelint-config-tailwindcss": "^0.0.7",
+    "stylelint-order": "^6.0.4",
     "tailwindcss": "^3.0.24",
-    "typescript": "^5.0.4"
+    "typescript": "5.5.4"
+  },
+  "lint-staged": {
+    "*.scss": [
+      "stylelint --fix",
+      "prettier --write"
+    ]
   }
 }
