--- a/.github/workflows/testApp.yml
+++ b/.github/workflows/testApp.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-         node-version: '20'
+          node-version: '20'
       - name: Install Application
-        run: npm ci install
+        run: yarn install --frozen-lockfile
       - name: Test app
-        run: npm test
+        run: yarn test
