--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.3.5",
     "classnames": "^2.5.1",
+    "country-state-city": "^3.2.1",
     "date-fns": "^2.30.0",
     "eslint-plugin-typescript": "^0.14.0",
     "firebase": "^9.17.2",
