--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "stylelint:fix": "stylelint '**/*.scss' --fix"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.1",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^2.9.11",
     "@react-google-maps/api": "^2.18.1",
