--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "qosqomposta",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -81,7 +82,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "stylelint-config-tailwindcss": "^0.0.7",
     "stylelint-order": "^6.0.4",
     "tailwindcss": "^3.0.24",
