--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@react-google-maps/api": "^2.18.1",
     "@svgr/webpack": "^6.2.1",
+    "@tanstack/react-table": "^8.20.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/google.maps": "^3.52.6",
